--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -65,8 +65,8 @@
                 <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
                     <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> SAP data
                 </NavLink>
-                <NavLink class="nav-link" href="ForTestingPurpose" style="margin-left: 15px">
-                    <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> Test
+                <NavLink class="nav-link" href="EditUsersPage" style="margin-left: 15px">
+                    <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> Users
                 </NavLink>
             }
         </li>
