--- a/CCM_New/Client/Pages/Index.razor
+++ b/CCM_New/Client/Pages/Index.razor
@@ -1,8 +1,14 @@
 ﻿@page "/"
+@using CCM_New.Client.Tool; 
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">CCM TOOL</h1>
         <p class="lead">Claim system  </p>
     </div>
+    
 </div>
+
+@code {
+ 
+}
